Lista Livros (CSS + img Livros)

--- a/src/container/Lista Livros/LLivros.scss
+++ b/src/container/Lista Livros/LLivros.scss
@@ -36,12 +36,11 @@
 
             display: grid;
 
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
             grid-template-rows: 1fr 1fr;
 
-            gap: 50px;
-
-
+            gap: 100px;
+            
 
             .app__llivros-item1 {
 
@@ -84,6 +83,59 @@
 
                 gap: 20px;
             }
+
+            .app__llivros-item5 {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                gap: 20px;
+            }
+            .app__llivros-item6 {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                gap: 20px;
+            }
+
+            .app__llivros-item7 {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                gap: 20px;
+            }
+
+            .app__llivros-item8 {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                gap: 20px;
+            }
+
+            .app__llivros-item9 {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                gap: 20px;
+            }
+
+            .app__llivros-item10 {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                gap: 20px;
+            }
            }
 
             
@@ -92,10 +144,10 @@
     }
 
     h2 {
+        text-align: center;
         font-family: 'Roboto', sans-serif;
         color: #fff;
-        font-size: 35px;
-        line-height: 83px;
+        font-size: 25px;
         letter-spacing: 0.04em;
         text-transform: uppercase;
     }
