--- a/src/container/Livros/Livros.scss
+++ b/src/container/Livros/Livros.scss
@@ -75,6 +75,7 @@
         overflow-x: scroll;
         -ms-overflow-style: none;
         scrollbar-width: none;
+        scroll-behavior: smooth;
     }
     
 
