--- a/src/Pages/ReservarLivros/RLivros.scss
+++ b/src/Pages/ReservarLivros/RLivros.scss
@@ -1,6 +1,6 @@
 .app__rlivros {
     width: 100%;
-    height: 1000px;
+    height: 1200px;
 
 
     .app__rlivros-container {
@@ -11,13 +11,15 @@
         align-items: center;
 
         .app__rlivros-head {
+            width: 99%;
+            
+            margin-top: 20px;
+            padding: 10px;
+            
             display: flex;
             justify-content: center;
             align-items: center;
 
-            
-            margin: auto;
-            padding: 20px;
 
             h1 {
                 font-family: 'Roboto', sans-serif;
@@ -30,7 +32,7 @@
         }
 
         .app__rlivros-livros {
-            width: 60%;
+            width: 50%;
 
             margin: 20px;
             padding: 10px;
@@ -68,6 +70,11 @@
         }
     }
 
+    
+        img {
+            width: 300px;
+            height: 538px;
+        }
    
 
        button {
