--- a/src/Pages/ReservarLivros/RLivros.scss
+++ b/src/Pages/ReservarLivros/RLivros.scss
@@ -1,9 +1,18 @@
 .app__rlivros {
     width: 100%;
-    height: 1200px;
+    height: auto;
+  
+
+    
+
+    img {
+        width: 300px;
+        height: 538px;
+    }
 
 
     .app__rlivros-container {
+        
 
         display: flex;
         flex-direction: column;
@@ -11,10 +20,6 @@
         align-items: center;
 
         .app__rlivros-head {
-            width: 99%;
-            
-            margin-top: 20px;
-            padding: 10px;
             
             display: flex;
             justify-content: center;
@@ -32,10 +37,9 @@
         }
 
         .app__rlivros-livros {
-            width: 50%;
+            width: 100%;
 
-            margin: 20px;
-            padding: 10px;
+            
 
             display: flex;
             flex-direction: column;
@@ -62,34 +66,166 @@
             }
 
             p {
+                width: 50%;
                 font-family: 'Roboto', sans-serif;
                 color: #fff;
                 font-size: 1.2rem;
                 letter-spacing: 0.05em;
             }
         }
+
+        .app__rlivros-rating {
+           display: flex;
+           flex-direction: column;
+           justify-content: center;
+           align-items: center;
+
+           .app__rlivros-stars {
+                width: 50%;
+
+                margin-top: 20px;
+                margin-bottom: 40px;
+                display: flex;
+                justify-content: space-around;
+
+                gap: 10px;
+
+                button {
+                    
+                    font-size: 30px;
+                    background-color: transparent;
+                    border: none;
+                    outline: none;
+                    cursor: pointer;
+                }
+
+                .on {
+                    color: gold;
+                }
+            
+                .off {
+                    color: #fff;
+                }
+
+           }
+        }
+
+       
     }
 
-    
-        img {
-            width: 300px;
-            height: 538px;
+    .app__rlivros-comments {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+       
+
+        
+        background: #DDDDDD;
+
+        .app__rlivros-comment {
+            width: 50%;
+            height: 200px;
+            
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            .app__rlivros-cform {
+                width: 50%;
+
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                .app__rlivros-label {
+
+                    h4 {
+                        margin-bottom: 15px;
+                        text-align: center;
+                        font-size: 20px;
+                        color: #1B1A18;
+                        font-family: 'Roboto', sans-serif;
+                        font-weight: 700;
+                        text-transform: uppercase;
+                        letter-spacing: 0.1em;
+                    }
+
+                    .app__rlivros-textarea {
+                        margin-bottom: 20px;
+
+                        color: #1B1A18;
+
+                        width: 700px;
+                        height: 30px;
+                        resize: none;
+
+                        border: 1px solid gold;
+                        border-radius: 25px;
+
+                        font-family: 'Roboto', sans-serif;
+
+                    }
+
+                }
+
+                .app__rlivros-bform {
+                    color: #000;
+                    background-color: #fff;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 700;
+                    letter-spacing: 0.04em;
+                    line-height: 28px;
+                    font-size: 16px;
+                    padding: 0.5rem 1.5rem;
+                    border-radius: 20px;
+                    border: 1px solid #fff;
+                    outline: none; 
+                    transition: 0.20s ease-in-out;
+                    
+                    cursor: pointer;
+                }
+
+                .app__rlivros-bform:hover {
+                    color: gold;
+                    background-color: #1B1A18;
+                    border-color: gold;
+                }
+            }
         }
-   
 
-       button {
-        background-color: transparent;
-        border: none;
-        outline: none;
-        cursor: pointer;
-       }
+        .app__rlivros-cc {
 
-       .on {
-        color: gold;
-       }
+            width: 500px;
+            height: 60px;
 
-       .off {
-        color: #fff;
-       }
+            margin-top: 30px;
+            margin-bottom: 30px;
+
+
+            background-color: #fff;
+
+            border: 1px solid gold;
+            border-radius: 25px;
+
+            font-family: 'Roboto', sans-serif;
+            text-transform: uppercase;
+            
+            display: flex;
+            justify-content: center;            
+        }
+    }
+
+  
+       
+
+    
+
+       
+
+      
 
 }
