--- a/src/Pages/ReservarLivros/RLivros.scss
+++ b/src/Pages/ReservarLivros/RLivros.scss
@@ -110,6 +110,31 @@
            }
         }
 
+        .app__rlivros-rbtn button {
+            margin-bottom: 30px;
+
+            color: #000;
+            background-color: #fff;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 700;
+            letter-spacing: 0.04em;
+            line-height: 28px;
+            font-size: 16px;
+            padding: 0.5rem 1.5rem;
+            border-radius: 20px;
+            border: 1px solid #fff;
+            outline: none; 
+            transition: 0.20s ease-in-out;
+                    
+            cursor: pointer;
+        }
+
+        button:hover {
+            color: #fff;
+            background-color: transparent;
+            border: 1px solid gold;
+        }
+
        
     }
 
