--- a/src/App.css
+++ b/src/App.css
@@ -50,4 +50,8 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }/*# sourceMappingURL=App.css.map */
