--- a/src/Pages/ReservarLivros/RLivros.scss
+++ b/src/Pages/ReservarLivros/RLivros.scss
@@ -241,7 +241,18 @@
         }
     }
 
-    
+    .app__rlivros-modal {
+        z-index: 9999;
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
   
        
