--- a/src/container/Livros/Livros.css
+++ b/src/container/Livros/Livros.css
@@ -25,7 +25,6 @@
 }
 .app__livros .app__livros-content {
   display: flex;
-  flex: 1;
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
@@ -35,7 +34,7 @@
 .app__livros .app__livros-content button {
   margin-top: 1rem;
   color: #000;
-  background: #fff;
+  background-color: #fff;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   letter-spacing: 0.04em;
@@ -54,7 +53,6 @@
   border-color: gold;
 }
 .app__livros .app__livros-images {
-  flex: 1;
   display: flex;
   flex-direction: row;
   max-width: 50%;
@@ -63,11 +61,10 @@
 .app__livros .app__livros-images .app__livros-container {
   display: flex;
   flex-direction: row;
-  width: -moz-max-content;
-  width: max-content;
   overflow-x: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  scroll-behavior: smooth;
 }
 .app__livros .app__livros-images .app__livros-container::-webkit-scrollbar {
   display: none;
@@ -106,10 +103,129 @@
 .app__livros .app__livros-images .app__livros-arrows .app__arrow-right {
   color: gold;
   font-size: 2rem;
-  background: #000;
+  background-color: #000;
   border-radius: 5px;
   cursor: pointer;
 }
 .app__livros .app__livros-images .app__livros-arrows:hover {
   color: #fff;
+}
+
+@media screen and (max-width: 768px) {
+  .app__livros {
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: row;
+    margin-left: 0px;
+    justify-content: center;
+    align-items: center;
+  }
+  .app__livros h1 {
+    font-family: "Roboto", sans-serif;
+    color: gold;
+    font-size: 64px;
+    line-height: 83px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+  }
+  .app__livros p {
+    display: none;
+  }
+  .app__livros .app__livros-content {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    flex-direction: column;
+    min-width: 500px;
+    padding-right: 0;
+  }
+  .app__livros .app__livros-content button {
+    margin-top: 1rem;
+    color: #000;
+    background: #fff;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    letter-spacing: 0.04em;
+    line-height: 28px;
+    font-size: 16px;
+    padding: 0.5rem 1.5rem;
+    border-radius: 20px;
+    border: 1px solid #fff;
+    outline: none;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+  }
+  .app__livros .app__livros-content button:hover {
+    color: gold;
+    background: transparent;
+    border-color: gold;
+  }
+  .app__livros .app__livros-images {
+    display: flex;
+    flex-direction: row;
+    max-width: 50%;
+    position: relative;
+  }
+  .app__livros .app__livros-images .app__livros-container {
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .app__livros .app__livros-images .app__livros-container::-webkit-scrollbar {
+    display: none;
+  }
+  .app__livros .app__livros-images .app__livros-cards {
+    position: relative;
+    min-width: 301px;
+    height: 447px;
+    margin-right: 2rem;
+  }
+  .app__livros .app__livros-images .app__livros-cards img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    opacity: 1;
+    transition: 0.5s ease;
+  }
+  .app__livros .app__livros-images .app__livros-cards:hover img {
+    opacity: 0.35;
+    cursor: pointer;
+  }
+  .app__livros .app__livros-images .app__livros-cards:hover {
+    opacity: 1;
+  }
+  .app__livros .app__livros-images .app__livros-arrows {
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0;
+    position: absolute;
+    bottom: 3%;
+  }
+  .app__livros .app__livros-images .app__livros-arrows .app__arrow-left,
+  .app__livros .app__livros-images .app__livros-arrows .app__arrow-right {
+    color: gold;
+    font-size: 2rem;
+    background: #000;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .app__livros .app__livros-images .app__livros-arrows:hover {
+    color: #fff;
+  }
+}
+@media screen and (max-width: 320px) {
+  .app__livros .app__livros-images {
+    display: none;
+  }
+  .app__livros .app__livros-images .app__livros-container::-webkit-scrollbar {
+    display: none;
+  }
+  .app__livros .app__livros-images .app__livros-cards {
+    display: none;
+  }
 }/*# sourceMappingURL=Livros.css.map */
