--- a/src/Pages/ReservarLivros/RLivros.scss
+++ b/src/Pages/ReservarLivros/RLivros.scss
@@ -242,7 +242,7 @@
     }
 
     .app__rlivros-modal {
-        z-index: 9999;
+        z-index: 10;
         position: fixed;
         top: 0;
         right: 0;
@@ -253,6 +253,31 @@
         justify-content: center;
         align-items: center;
     }
+
+    .app__rlivros-smodal {
+        z-index: 99999;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+      }
+      
+      .app__rlivros-scontent {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        width: 300px;
+        height: 200px;
+        padding: 20px;
+        border-radius: 5px;
+      }
 
   
        
