--- a/src/Pages/ReservarLivros/RLivros.scss
+++ b/src/Pages/ReservarLivros/RLivros.scss
@@ -242,42 +242,152 @@
     }
 
     .app__rlivros-modal {
+        overflow: hidden;
         z-index: 10;
         position: fixed;
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.8);
+        
         display: flex;
+        
         justify-content: center;
         align-items: center;
+
+        .app__rlivros-mcontent {
+            width: 50%;
+            height: 400px;
+            
+            display: flex;
+            justify-content: space-around;
+            flex-direction: column;
+
+            border: 1px solid gold;
+
+            h2 {
+                display: flex;
+                justify-content: center;
+
+                font-family: 'Roboto', sans-serif;
+                color: gold;
+                font-size: 2rem;
+                line-height: 83px;
+                letter-spacing: 0.04em;
+                text-transform: uppercase;
+            }
+
+            .app__mx {
+
+                width: 100%;
+                
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                button {
+                    background-color: transparent;
+                    border: none;
+                    color: #fff;
+                    font-size: 2rem;
+
+                    cursor: pointer;                   
+                }
+
+                button:hover {
+                    color: gold;               
+                }
+            }
+            
+
+            form {
+                margin: 20px;
+
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+
+                
+    
+                label {
+                    
+                    text-transform: uppercase;
+                    font-weight: 600;
+                    font-family: 'Roboto', sans-serif;
+                    color: #fff;
+                    font-size: 1rem;
+
+                    input {
+                        width: 50%;
+                        margin-left: 20px;
+                        outline: none;
+
+                        border: 1px solid gold;
+                        border-radius: 25px;
+                    }
+
+                }
+
+                .app__btnm {
+
+                    
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    button {
+
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+        
+                        margin-top: 1rem;
+        
+                        color: #000;
+                        background-color: #fff;
+                        font-family: 'Roboto', sans-serif;
+                        font-weight: 700;
+                        letter-spacing: 0.04em;
+                        line-height: 28px;
+                        font-size: 16px;
+                        padding: 0.5rem 1.5rem;
+                        border-radius: 20px;
+                        border: 1px solid #fff;
+                        outline: none; 
+                        transition: 0.20s ease-in-out;
+                            
+                        cursor: pointer;
+        
+                        }
+
+                        button:hover {
+                            background-color: gold;
+                            border-color: #fff;
+                            color: #fff;
+                        }
+
+
+                }
+
+              
+
+               
+
+                
+                
+
+                
+
+            }
+
+            
+
+           
+        }
     }
 
-    .app__rlivros-smodal {
-        z-index: 99999;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-      }
-      
-      .app__rlivros-scontent {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: white;
-        width: 300px;
-        height: 200px;
-        padding: 20px;
-        border-radius: 5px;
-      }
+   
 
   
        
