--- a/src/components/NavBot/NavBot.scss
+++ b/src/components/NavBot/NavBot.scss
@@ -5,7 +5,7 @@
 
     border-bottom: 1px solid rgba(55, 55, 55, 0.6);
 
-    background: #FFFFFF;
+    background-color: #FFFFFF;
 
     display: flex;
     justify-content: center;
