--- a/src/components/NavBot/NavBot.css
+++ b/src/components/NavBot/NavBot.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 65px;
   border-bottom: 1px solid rgba(55, 55, 55, 0.6);
-  background: #FFFFFF;
+  background-color: #FFFFFF;
   display: flex;
   justify-content: center;
   align-items: center;
