--- a/src/Pages/ReservarLivros/RLivros.scss
+++ b/src/Pages/ReservarLivros/RLivros.scss
@@ -378,8 +378,18 @@
         display: flex;
 
         flex-direction: column;
-        
+      
         .app__rlivros-container{
+
+            .app__rlivros-head  {
+
+                h1 {
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+                    font-size: 3rem;
+                    text-align: center;
+                }                
+            }
 
             .app__rlivros-livros {
 
