--- a/src/Pages/ReservarLivros/RLivros.scss
+++ b/src/Pages/ReservarLivros/RLivros.scss
@@ -372,6 +372,36 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    .app__rlivros {
+        .app__rlivros-modal {
+            
+            .app__rlivros-mcontent {
+
+                height: 600px;
+
+                h2 {
+                    
+                    text-align: center;
+                }
+
+                form {
+
+                    label {
+
+                        text-align: center;
+
+                        input {
+                            width: 300px;
+                        }
+                    }
+
+                }
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 320px) {
     .app__rlivros {
         overflow: hidden;
@@ -401,6 +431,6 @@
 
         .app__rlivros-comments {
             display: none;
-        }
+        }        
     }
 }
