--- a/src/components/NavTop/NavTop.css
+++ b/src/components/NavTop/NavTop.css
@@ -54,12 +54,17 @@
   color: #FFFFFF;
   border-top: 1px solid #22262e;
 }
-.app__navbar .app__navbar-search .app__navbar-results table a {
-  text-decoration: none;
-  color: #fff;
-  transition: 0.3s ease-in-out;
+.app__navbar .app__navbar-search .app__navbar-results table button {
+  padding: 5px;
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: transparent;
   font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
   text-transform: uppercase;
+  cursor: pointer;
 }
 .app__navbar .app__navbar-search .app__navbar-box {
   box-sizing: border-box;
