--- a/src/components/NavTop/NavTop.scss
+++ b/src/components/NavTop/NavTop.scss
@@ -70,12 +70,21 @@
                         border-top: 1px solid #22262e;
                       }
 
-                    a {
-                        text-decoration: none;
-                        color: #fff;  
-                        transition: 0.3s ease-in-out;
+                    button {
+                        padding: 5px;
+                        width: 100%;
+                        height: 100%;
+                        border: none;
+                        background-color: transparent;
+
                         font-family: 'Roboto', sans-serif;
+                        font-size: 1rem;
+                        font-weight: 600;
                         text-transform: uppercase;
+                        
+
+                        cursor: pointer;
+                        
                     }                    
                 }
             }
