--- a/src/container/Contatos/Contatos.scss
+++ b/src/container/Contatos/Contatos.scss
@@ -110,8 +110,14 @@
             background-color: rgba(0, 0, 0, 0.8);
             z-index: 9999;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
+
+            h2 {
+                display: flex;
+                justify-content: center;
+            }
 
             form {
                 width: 30%;
@@ -132,17 +138,47 @@
                 }
 
                 input {
+                    margin: 5px;
+                    padding: 10px;
                     outline: none;
                     border: 1px solid gold;
                     border-radius: 25px;
+
+                    font-family: 'Roboto', sans-serif;
+                    font-size: 1rem;
+                    font-weight: 300;
+
+                    letter-spacing: 0.1rem;
                 }
                 
 
                 textarea {
+                    padding: 10px;
                     border: 1px solid gold;
                     border-radius: 5px;
                     resize: none;
                     outline: none;
+
+                    font-family: 'Roboto', sans-serif;
+                    font-size: 1rem;
+                    letter-spacing: 0.1rem;
+                }
+            }
+
+            .app__falert {
+                margin: 20px;
+                background-color: #4caf50;
+                color: #fff;
+                padding: 10px;
+                text-align: center;
+                border-radius: 5px;
+
+                p {
+                    color: #fff;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 300;
+                    text-transform: uppercase;
+                    
                 }
             }
 
