--- a/src/components/NavTop/NavTop.css
+++ b/src/components/NavTop/NavTop.css
@@ -156,67 +156,63 @@
   height: 148px;
 }
 .app__navbar .app__navbar-container .app__navbar-userbox {
-  display: flex;
-  justify-content: right;
+  width: 200px;
 }
 .app__navbar .app__navbar-container .app__navbar-userbox .app__navbar-account {
   display: flex;
   justify-content: center;
+  align-items: center;
   border-bottom: 1px solid #DDDDDD;
   border-left: 1px solid #DDDDDD;
   border-right: 1px solid #DDDDDD;
+  gap: 10px;
+}
+.app__navbar .app__navbar-container .app__navbar-userbox .app__navbar-account .user {
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  color: gold;
 }
 .app__navbar .app__navbar-container .app__navbar-userbox .app__navbar-schedule {
   display: flex;
   justify-content: center;
+  align-items: center;
   border-bottom: 1px solid #DDDDDD;
   border-left: 1px solid #DDDDDD;
   border-right: 1px solid #DDDDDD;
+  gap: 10px;
+}
+.app__navbar .app__navbar-container .app__navbar-userbox .app__navbar-schedule .clock {
+  width: 16px;
+  height: 16px;
+  color: gold;
 }
 .app__navbar .app__navbar-container .app__navbar-userbox .app__navbar-cartao {
   display: flex;
   justify-content: center;
+  align-items: center;
   border-left: 1px solid #DDDDDD;
   border-right: 1px solid #DDDDDD;
+  gap: 10px;
+}
+.app__navbar .app__navbar-container .app__navbar-userbox .app__navbar-cartao .card {
+  width: 16px;
+  height: 16px;
+  color: gold;
 }
 .app__navbar .app__navbar-container .app__navbar-userbox li {
   width: 100%;
   height: 49px;
 }
 .app__navbar .app__navbar-container .app__navbar-userbox a {
-  padding-left: 20px;
-  padding-right: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
+  color: #252524;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
   text-decoration: none;
-  font-size: 1rem;
-  line-height: 25px;
-  font-weight: 300;
-  color: #373737;
-  font-family: "Robot", sans-serif;
-}
-.app__navbar .app__navbar-container .app__navbar-userbox a p {
-  width: 91px;
+  text-transform: capitalize;
   transition: 0.3s ease-in-out;
 }
-.app__navbar .app__navbar-container .app__navbar-userbox a p:hover {
-  color: gold;
-}
-.app__navbar .app__navbar-container .app__navbar-userbox a .user {
-  width: 16px;
-  height: 16px;
-  color: gold;
-}
-.app__navbar .app__navbar-container .app__navbar-userbox a .clock {
-  width: 16px;
-  height: 16px;
-  color: gold;
-}
-.app__navbar .app__navbar-container .app__navbar-userbox a .card {
-  width: 16px;
-  height: 16px;
+.app__navbar .app__navbar-container .app__navbar-userbox a:hover {
   color: gold;
 }
 .app__navbar .app__navbar-mobile {
