--- a/src/components/NavTop/NavTop.scss
+++ b/src/components/NavTop/NavTop.scss
@@ -220,26 +220,46 @@
                 height: 148px;
 
             .app__navbar-userbox {
+                width: 200px;
 
-                display: flex;
-                justify-content: right;
+                
 
                 .app__navbar-account {
+                    
                     display: flex;
                     justify-content: center;
+                    align-items: center;
 
                     border-bottom: 1px solid #DDDDDD;
                     border-left: 1px solid #DDDDDD;
                     border-right: 1px solid #DDDDDD;
+
+                    gap: 10px;
+
+                    .user {
+                        align-items: center;
+                        width: 16px;
+                        height: 16px;
+                        color: gold;
+                     }
                 }
 
                 .app__navbar-schedule {
                     display: flex;
                     justify-content: center;
+                    align-items: center;
 
                     border-bottom: 1px solid #DDDDDD;
                     border-left: 1px solid #DDDDDD;
                     border-right: 1px solid #DDDDDD;
+
+                    gap: 10px;
+
+                    .clock {
+                        width: 16px;
+                        height: 16px;
+                        color: gold;
+                    }
 
                    
                 }
@@ -247,64 +267,51 @@
                 .app__navbar-cartao {
                     display: flex;
                     justify-content: center;
+                    align-items: center;
                     
                     border-left: 1px solid #DDDDDD;
                     border-right: 1px solid #DDDDDD;
+
+                    gap: 10px;
+
+                    .card {
+                        width: 16px;
+                        height: 16px;
+                        color: gold;
+                    }   
                 }
                   
 
-                    li {
+                li {
                         width: 100%;                        
                         height: 49px;
 
-                    }
+                }
 
-                    a {
-                        padding-left: 20px;
-                        padding-right: 20px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        gap: 10px;
+                a {
+                    color: #252524;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 400;
+                    text-decoration: none;
+                    text-transform: capitalize;
 
-                        text-decoration: none;
-                        font-size: 1rem;
-                        line-height: 25px;
-                        font-weight: 300;
-                        color: #373737;
-                        font-family: 'Robot', sans-serif;
-
-                        p {
-                            width: 91px;
-                            transition: 0.30s ease-in-out;
-
-                        }
-
-                        p:hover {
-                            color: gold;
-                        }
-
-                       .user {
-                           width: 16px;
-                           height: 16px;
-                           color: gold;
-                        }
-
-                        .clock {
-                            width: 16px;
-                            height: 16px;
-                            color: gold;
-                        }
-
-                        .card {
-                            width: 16px;
-                            height: 16px;
-                            color: gold;
-                        }
-
-                    
+                    transition: 0.3s ease-in-out;
 
                 }
+
+                a:hover {
+                    color: gold;
+                }
+
+
+
+                       
+
+                        
+
+                                      
+
+                
             }
         }
 
