--- a/src/Pages/ReservarLivros/RLivros.scss
+++ b/src/Pages/ReservarLivros/RLivros.scss
@@ -177,7 +177,10 @@
                     }
 
                     .app__rlivros-textarea {
+                       
+                        padding: 10px 0 0 10px; 
                         margin-bottom: 20px;
+                        outline-color: #fff;
 
                         color: #1B1A18;
 
@@ -189,7 +192,9 @@
                         border-radius: 25px;
 
                         font-family: 'Roboto', sans-serif;
-
+                        font-weight: 500;
+                        font-size: 1rem;
+                        letter-spacing: 0.1rem;
                     }
 
                 }
@@ -302,15 +307,22 @@
             
 
             form {
+                width: 100%;
+                height: 100%;
                 margin: 20px;
 
                 display: flex;
                 flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            
                 gap: 20px;
 
-                
-    
                 label {
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                     
                     text-transform: uppercase;
                     font-weight: 600;
@@ -319,7 +331,7 @@
                     font-size: 1rem;
 
                     input {
-                        width: 50%;
+                        width: 200px;
                         margin-left: 20px;
                         outline: none;
 
