--- a/src/components/NavTop/NavTop.scss
+++ b/src/components/NavTop/NavTop.scss
@@ -288,6 +288,10 @@
 
                 }
 
+                .active {
+                    color: gold;
+                }
+
                 a {
                     color: #252524;
                     font-family: 'Roboto', sans-serif;
@@ -303,15 +307,9 @@
                     color: gold;
                 }
 
-
-
-                       
-
-                        
-
-                                      
-
                 
+
+               
             }
         }
 
