--- a/src/Pages/MinhaConta/MinhaConta.scss
+++ b/src/Pages/MinhaConta/MinhaConta.scss
@@ -125,6 +125,40 @@
                 }
 
             }
+
+            .app__s-m {
+                margin: 20px;
+                background-color: #4caf50;
+                color: #fff;
+                padding: 10px;
+                text-align: center;
+                border-radius: 5px;
+    
+                p {
+                    color: #fff;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 300;
+                    text-transform: uppercase;
+                    
+                }
+            }
+
+            .app__e-m {
+                margin: 20px;
+                background-color: red;
+                color: #fff;
+                padding: 10px;
+                text-align: center;
+                border-radius: 5px;
+    
+                p {
+                    color: #fff;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 300;
+                    text-transform: uppercase;
+                    
+                }
+            }
         }
 
     }
